[gd_scene load_steps=19 format=2]

[ext_resource path="res://chao/chao.tres" type="TileSet" id=1]
[ext_resource path="res://fase_ensinomedio/quarto.png" type="Texture" id=2]
[ext_resource path="res://chao/floor.png" type="Texture" id=3]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_4- Transparente.png" type="Texture" id=4]
[ext_resource path="res://fase_hospital/portal.png" type="Texture" id=5]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_1- Transparente.png" type="Texture" id=6]
[ext_resource path="res://menu/Seguinte.png" type="Texture" id=7]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_2- Transparente.png" type="Texture" id=8]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_3- Transparente.png" type="Texture" id=9]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_5- Transparente.png" type="Texture" id=10]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_7- Transparente.png" type="Texture" id=11]
[ext_resource path="res://personagem_masc_novo/vitor_novo_andando_6- Transparente.png" type="Texture" id=12]
[ext_resource path="res://cenas_node/Button_seguinte_escola.gd" type="Script" id=13]
[ext_resource path="res://cenas_node/andando_quarto_jovem.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 356 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61, 293 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50.5, 144.5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 764.5, 242.5 )
scale = Vector2( 1.00424, 1.13492 )
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -48, 244 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( -48, 244 )
scale = Vector2( 0.5, 11.125 )
texture = ExtResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 1584, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
position = Vector2( -48, 240 )
scale = Vector2( 0.666666, 11 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -51, 283 )
shape = SubResource( 2 )

[node name="Button_seguinte_escola" type="Button" parent="."]
margin_left = 1016.0
margin_top = 376.0
margin_right = 1208.0
margin_bottom = 432.0
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button_seguinte_escola"]
position = Vector2( 102.25, 27.5 )
scale = Vector2( 0.648529, 0.741666 )
texture = ExtResource( 7 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 682.5, 336.5 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 688, 320 )
scale = Vector2( 0.528881, 0.5 )
frames = SubResource( 4 )
animation = "walking"

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 32, 64 )
anchor_mode = 0
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 696, 304 )
scale = Vector2( 0.422222, 0.42037 )
z_index = -1
texture = ExtResource( 5 )

[connection signal="mouse_entered" from="Button_seguinte_escola" to="Button_seguinte_escola" method="_on_Button_seguinte_escola_mouse_entered"]
[connection signal="mouse_exited" from="Button_seguinte_escola" to="Button_seguinte_escola" method="_on_Button_seguinte_escola_mouse_exited"]
[connection signal="pressed" from="Button_seguinte_escola" to="Button_seguinte_escola" method="_on_Button_seguinte_escola_pressed"]
